--- a/index.html
+++ b/index.html
@@ -98,10 +98,12 @@
 				<span>I am a</span>
 				<span class="cd-words-wrapper">
 					<b class="is-visible">Web Developer</b>
-					<b>Web Design</b>
-					<b>Creative Design</b>
-					<b>Graphic Design</b>
-                    <b>Poet</b>
+					<b>Web Designer</b>
+					<b>Creative Designer</b>
+					<b>Graphic Designer</b>
+					<b>Game Developer</b>
+					<b>Software Developer</b>
+                    			<b>Poet</b>
 				</span>
 			</h3>
 		</div>
