--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
 	<section id="home" class="main-banner parallaxie" style="background: url('uploads/banner-01.jpg')">
 		<div class="heading">
 			<h1>hello i'm Robert</h1>
-			<p>"If I was to describe myself as a SpongeBob charecter I would say, Patrick Star <br>I  would go on and say that I am dumb hearted like Patrick, I tend to let life take its course and that is the fuel to my creative space."</p>
+			<p>"If I was to describe myself as a SpongeBob character I would say, Patrick Star <br>I  would go on and say that I am dumb hearted like Patrick, I tend to let life take its course and that is the fuel to my creative space."</p>
 			<h3 class="cd-headline clip is-full-width">
 				<span>I am a</span>
 				<span class="cd-words-wrapper">
@@ -197,7 +197,7 @@
 							<i class="flaticon-discuss-issue"></i>
 						</div>
 						<h2>UI/UX & Graphics Design</h2>
-						<p>Designed to give the user an unforgatable experience.</p>
+						<p>Designed to give the user an unforgettable experience.</p>
 					</div>
                 </div><!-- end col -->
 				<div class="col-md-4">
@@ -205,7 +205,7 @@
 						<div class="ser-icon">
 							<i class="flaticon-idea"></i>
 						</div>
-						<h2>Search Engine Optimisation</h2>
+						<h2>Search Engine Optimization</h2>
 						<p>Make your website easly accessable on search engines with a good carefully crafted SEO plan.</p>
 					</div>
                 </div><!-- end col -->
@@ -226,7 +226,7 @@
 		<div class="container">
 			<div class="section-title text-left">
                 <h3>Portfolio</h3>
-                <p>Get a front row seat to my creative App gallary.</p>
+                <p>Get a front row seat to my creative App gallery.</p>
             </div><!-- end title -->
 			
 			<div class="gallery-menu row">
