--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
                         <p> I am a meticulous web developer with over 2 years of front end experience and passion for responsive website design and a firm believer in the mobile-first approach. </p>
 						<p>I am currently doing freelance development and I work with a team of 5 people in which I am the leader under my supervision my team has created 3 websites and developed a school management system that is being used by a local private school in my community. I can definitely say that my collaborative experience is good since I have introduced a system where by it easy to share our code and chat using slack and  confluence, We managed to reduce the the time to to finish a project by 35% increasing our efficiency.</p>
 
-                        <a href="https://drive.google.com/file/d/12Vk4djtf7_90V-9Em47k7itW6WuqZUiv/view?usp=share_link" class="sim-btn btn-hover-new" data-text="Download CV"><span>Download CV</span></a>
+                        <a href="https://drive.google.com/file/d/12Vk4djtf7_90V-9Em47k7itW6WuqZUiv/view?usp=sharing" class="sim-btn btn-hover-new" data-text="Download CV"><span>Download CV</span></a>
                     </div><!-- end messagebox -->
                 </div><!-- end col -->
 
